<resources>
    <string name="app_name">GuichetATM</string>
    <string name="nom_utilisateur">Nom d\'utilisateur</string>
    <string name="nip">NIP</string>
    <string name="authentification">Authentification</string>
    <string name="bonjour">Bonjour Android ATM</string>
    <string name="deconnection">Deconnection</string>
    <string name="zero">0</string>
    <string name="un">1</string>
    <string name="deux">2</string>
    <string name="trois">3</string>
    <string name="quatre">4</string>
    <string name="cinq">5</string>
    <string name="six">6</string>
    <string name="sept">7</string>
    <string name="huit">8</string>
    <string name="neuf">9</string>
    <string name="point">.</string>
    <string name="effacer">EFF</string>
    <string name="depot">Dépôt</string>
    <string name="retrait">Retrait</string>
    <string name="virement">Virement</string>
    <string name="cheque">Chèque</string>
    <string name="epargne">Épargne</string>
    <string name="etat_des_comptes">État des comptes</string>
    <string name="soumettre">Soumettre            </string>
    <string name="paiement_interets">Paiement des intérêts</string>
    <string name="liste_cheque">Comptes chèques</string>
    <string name="liste_epargne">Comptes épargne</string>
    <string name="liste_client">Liste des clients</string>
    <string name="liste_cheque_admin">Liste des comptes chèques</string>
    <string name="liste_eparne_admin">Liste des comptes épargne</string>
    <string name="liste_client_admin">Liste des clients</string>
    <string name="prenom_client">Prenom du client </string>
    <string name="nom_client">Nom du client </string>
    <string name="nombre_client">Nombre de client :  </string>
    <string name="nombre_cheque">Nombre de compte chèque :  </string>
    <string name="nombre_epargne">Nombre de compte épargne :  </string>
    <string name="numero_compte_cheque">Numéro du compte :  </string>
    <string name="solde_compte_cheque">Solde du compte :  </string>
    <string name="numero_compte_epargne">Numéro du compte :  </string>
    <string name="solde_compte_epargne">Solde du compte :  </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>