<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingHorizontal="20dp"
    android:background="@color/fond"
    tools:context=".Authentification">


    <EditText
        android:id="@+id/editxtNomUtilisateur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/niv1"
        android:textColorHint="@color/niv1"
        android:autofillHints="@string/nom_utilisateur"
        android:hint="@string/nom_utilisateur" />

    <EditText
        android:id="@+id/editTxtNip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/niv1"
        android:textColorHint="@color/niv1"
        android:autofillHints="@string/nip"
        android:hint="@string/nip"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAuthentifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="onClickAuthentifier"
            android:text="@string/authentification" />


    </RelativeLayout>


</LinearLayout>